<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15"
            tools:viewBindingIgnore="true" />

        <TextView
            android:id="@+id/txt_enterPhoneNUmber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_phone_number"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline"
            tools:viewBindingIgnore="true" />

        <EditText
            android:id="@+id/et_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/et_background"
            android:drawableStart="@drawable/baseline_add_24"
            android:inputType="number"
            android:maxLength="11"
            android:paddingHorizontal="24dp"
            app:layout_constraintTop_toBottomOf="@id/txt_enterPhoneNUmber" />


        <TextView
            android:id="@+id/txt_inSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/in_summary"
            android:visibility="invisible"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="32dp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/et_phoneNumber" />

        <TextView
            android:id="@+id/txt_inResults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_inSummary"
            tools:text="00:55" />

        <TextView
            android:id="@+id/txt_outSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:text="@string/out_summary"
            android:visibility="invisible"
            android:layout_marginTop="32dp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/txt_inResults" />

        <TextView
            android:id="@+id/txt_outResults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_outSummary"
            tools:text="00:55" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_showResults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:backgroundTint="@color/btn_results"
            android:text="@string/see_results"
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_outResults" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_clear"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/clear"
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_showResults" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_exit"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/btn_exit"
            android:text="@string/exit"
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_clear" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>